# paqFe

./: .gitignore  CMakeLists.txt  Readme.md
eval/: CMakeLists.txt  eval.sh
eval/src/: main.cpp  orders.cpp
hash/: CMakeLists.txt
hash/src/: eval.hpp  hash.hpp  main.cpp  scores.hpp  trace.hpp  trace_gen.cpp
include/paqFe/: APM.hpp  Coder.hpp  Engine.hpp  FixedPoint.hpp  HashMap.hpp  Header.hpp  Mixer.hpp  Predictor.hpp  StreamFile.hpp  paqFe.hpp  types.hpp
include/paqFe/models/: BiasModel.hpp  CRC.hpp  ContextMap.hpp  ContextMap2.hpp  Group.hpp  Group.p  MatchModel.hpp  MatchModel.p  NewOrders.hpp  NormalModel.hpp  Orders.hpp  Orders.p  PresudoModel.hpp  SimpleBytePredict.hpp  StateMap.hpp  StateModel.hpp  TabHash.h  TabHash.hpp  TabHash.scala  model.hpp
include/paqFe/models/lpaq/: orders.hpp
paqFe/: Coder.hpp  Header.hpp  Mixer.hpp  Predictor.hpp  paqFe.hpp  types.hpp
paqFe/models/: CRC.hpp  MatchModel.hpp  PresudoModel.hpp
src/: main.cpp
test/: CMakeLists.txt  basic_test.sh  dowload-data.sh  download-Silesia.sh  download-data.sh  enwik8.sh  make-verify-data.sh  runtest.sh  runtestb128.sh  runtestb16.sh  runtestb2.sh  runtestb256.sh  runtestb32.sh  runtestb4.sh  runtestb512.sh  runtestb64.sh  runtestb8.sh  runtestbw.sh
test/src/: contextmap.cpp  matchmodel.cpp  math  math.cpp  mixer.cpp  order1.cpp  orders.cpp  paqfe.cpp  paqfebw.cpp  predictor.cpp  state.cpp  statemap.cpp  stream.cpp  usage.cpp
verify/: CMakeLists.txt  genDB.sh
verify/src/: coder.cpp  main.cpp  mixer-config.cpp  mixer-harzard-rate.cpp  mixer-harzard.cpp  mixer-l1-pe-loss.cpp  mixer-l1-pe-predict.cpp  mixer-l1-pe-update.cpp  mixer-l1.cpp  mixer-l2.cpp  mixer-loss.cpp  mixer-predict.cpp  mixer-update.cpp  mixer.cpp  order1.cpp  order1ctx.cpp  orders.cpp  ordersctx.cpp  statemap.cpp  stateshift.cpp  staticstatemap.cpp
